<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="4sp"
    tools:context=".oldui.MainActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@drawable/ic_passcodes"
        android:contentDescription="@string/passcodes_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="32sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/password_manager_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_manager_button_text"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_button_text"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/about_us_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_button_text"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>

