<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".oldui.AboutUsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/textview_aboutus_headline"
            app:titleTextColor="?attr/colorOnSurface" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/textview_app_warning"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/textview_app_description"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorOnSurface" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2"
                android:useDefaultMargins="true"
                tools:ignore="UseCompoundDrawables">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_security_guidelines"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="View Security Guidelines"
                            android:src="@drawable/ic_security"
                            app:tint="?attr/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_security_guidelines_button_text"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_release_notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="Release Notes"
                            android:src="@drawable/ic_history"
                            app:tint="?attr/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_release_notes_button_text"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_license"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="Document Icon"
                            android:src="@drawable/ic_article"
                            app:tint="?attr/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_license_button_text"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_report_bug"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="Report Bug"
                            android:src="@drawable/ic_bug_report"
                            app:tint="?attr/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_report_bug_text"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_telegram_community"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="Join Telegram Community"
                            android:src="@drawable/ic_send"
                            app:tint="?attr/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_telegram_community_text"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </GridLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/label_contributor"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="?attr/colorTertiaryContainer"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="?attr/colorTertiary"
                    android:text="@string/developer_name"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="?attr/colorTertiaryContainer"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="?attr/colorTertiary"
                    android:text="@string/code_maintainer"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="?attr/colorTertiaryContainer"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="?attr/colorTertiary"
                    android:text="@string/co_developer"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>